# resstock

./: .gitattributes  .gitignore  Changelog.md  README.md  tasks.rb
.github/: pull_request_template.md
postprocessing/: .gitignore  .pre-commit-config.yaml  .spelling.dic  .typos.toml  README.md  prefect.yaml  pyproject.toml  ruff.toml  setup.py
postprocessing/resstockpostproc/: __init__.py  __version__.py  create_allocated_weights.py  create_athena_views_from_results.py  data_dict.py  enum_dict.py  get_failures.py  income_mapper.py  process_bsb_results.py  process_data_dict.py  process_metadata.py  process_timeseries_results.py  sample_buildstock.py  utils.py
postprocessing/resstockpostproc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
postprocessing/resstockpostproc/baseline_validation/: README.md  create_html.py  create_html_viewer.py  dashboard_paths.py  footnotes.py  main.py  plot_generator.py  plot_semantics.py  plot_showcase.md  resstock_raw.py  theme.py  utils.py  workflow.yaml
postprocessing/resstockpostproc/baseline_validation/dashboard/: about_dashboard.md  create_about_html.py  create_html.py  create_html_viewer.py  dashboard.py
postprocessing/resstockpostproc/baseline_validation/data_processing/: data_processor.py  dataset_adapters.py  gather_data.py  histogram_data.py  metrics.py  recs_mapping.py  recs_rse.py
postprocessing/resstockpostproc/baseline_validation/data_scraping/: scrap_eia176.py  scrap_eia861.py  scrap_eia861M.py  scrap_recs.py
postprocessing/resstockpostproc/baseline_validation/data_scrapping/: scrap_eia176.py  scrap_eia861.py  scrap_eia861M.py  srcap_recs.py
postprocessing/resstockpostproc/baseline_validation/db_schemas/: resstock_oedi_new.toml  resstock_oedi_vu.toml
postprocessing/resstockpostproc/baseline_validation/example_plots/: README.md
postprocessing/resstockpostproc/baseline_validation/generation/: index_rows.py  plot_generator.py  render_runner.py  stacked_pages.py  work_items.py
postprocessing/resstockpostproc/baseline_validation/io_managers/: comparison_data_paths.py  data_table.py  data_table_columns.py  data_table_transform.py  eiaid_mapping.py  get_eia_data.py  get_lrd_data.py  get_recs_data.py  get_resstock_data.py  html_utils.py  output_manager.py  stats.py  truth_data_paths.py  utils.py
postprocessing/resstockpostproc/baseline_validation/plot_helpers/: resstock_raw.py  theme.py  utils.py
postprocessing/resstockpostproc/baseline_validation/plotters/: base_plotter.py  box_plot_data.py  box_plotter.py  eia_plotter.py  graph_splitting.py  histogram_plot.py  lrd_plotter.py  main_plotter.py  plot_config.py  recs_plotter.py  stacked_plotter.py  timeseries_plotter.py  vertical_plotter.py
postprocessing/resstockpostproc/baseline_validation/schema/: generate_plot_definition.py  plot_definition.csv  plot_definition.tsv  plot_definitions.py  plot_footnotes.yaml  plot_spec.py  recs_chars_mapping.py  recs_enduse_mapping.py  workflow_schema.py
postprocessing/resstockpostproc/baseline_validation/tests/: _helpers.py  test_create_html.py  test_create_html_filter_pair_tabs.py  test_create_html_metric_order.py  test_data.py  test_data_table.py  test_eia_viz.py  test_error_bars.py  test_footnotes.py  test_gather_data.py  test_get_recs_data_bounds.py  test_histogram_data.py  test_histogram_utils.py  test_hover_formatting.py  test_html_utils.py  test_lrd_viz.py  test_main.py  test_plot_generator.py  test_plot_spec.py  test_range_utils.py  test_recs_rse.py  test_resstock_annual_fast_path.py  test_rse_column_resolution.py  test_stacked_plotter.py  test_template_expansion.py  test_utils.py  test_vertical_plotter.py  test_workflow_schema_histogram.py
postprocessing/resstockpostproc/resources/dictionary/: inputs.csv  outputs.csv
postprocessing/resstockpostproc/resources/gisdata/: county_lookup_table.csv  spatial_county_lookup_table.csv  us_states.geojson  us_states_lower48.geojson
postprocessing/resstockpostproc/resources/publication/: Column Name Crosswalk.csv  data_dictionary.tsv  data_enum_dict.py  enumeration_dictionary.tsv  sdr_column_definitions.csv  sdr_column_definitions_with_2024-2_equivalents.xlsx
postprocessing/resstockpostproc/shared_utils/: __init__.py  caching.py  colors.py  db_column_names.py  histogram_utils.py  mapping.py  s3_manager.py  sorting.py  timing.py
postprocessing/resstockpostproc/shared_utils/generic_plotters/: bar_plotter.py  box_plotter.py  hover_formatting.py  monthly_plotter.py  range_utils.py  theme.py  tilemap_plotter.py
postprocessing/resstockpostproc/standard_plots/: __init__.py  all_plots_generator.py  bar_plotter.py  base_plotter.py  box_plotter.py  choropleth_plotter.py  dashboard.py  data_processor.py  dynamic_dashboard.py  generate_plots.py  heatmap_plotter.py  highlights.yaml  highlights_generator.py  histogram_plotter.py  input_manager.py  main.py  orchestrator.py  output_manager.py  plot_refinement.ipynb  theme.py  utils.py  workflow.yaml
postprocessing/resstockpostproc/standard_plots/dashboard/: basic_dashboard.py  dynamic_dashboard.py  layout.py  run_context.py
postprocessing/resstockpostproc/standard_plots/data_processing/: data_processor.py
postprocessing/resstockpostproc/standard_plots/io_managers/: input_manager.py  output_manager.py
postprocessing/resstockpostproc/standard_plots/plotters/: bar_plotter.py  box_plotter.py  choropleth_plotter.py  heatmap_plotter.py  histogram_plotter.py  plot_utils.py
postprocessing/resstockpostproc/upgrade_comparison/: .gitignore  README.md  __init__.py  all_plots_generator.py  highlights.yaml  highlights_generator.py  main.py  theme.py  utils.py  workflow.yaml
postprocessing/tests/: test_caching.py  test_data_dictionary.py  test_income_mapping.py  test_process_timeseries_results.py  test_sample_buildstock.py
sampler/: README.md  pyproject.toml  sampler.py  sampling_utils.py  test_sampling.py
sampler/sampler/: run_sampler.py  sampler.py  sampler_config.yaml  sampling_utils.py  utils.py
sampler/src/sampler/: sampler.py  sampling_utils.py
sampler/tests/: test_sampling.py
test/: analysis.rb  (+9 more)
(+2467 files in other folders)
