[project]
name = "resstockpostproc"
version = "0.1.0" # This should be replaced with the actual version from __version__.py
description = "Placeholder description" # This should be replaced with the actual description from __version__.py
authors = [
    { name = "NREL", email = "resstock@nrel.gov" } # Replace with actual author and email from __version__.py
]
readme = "README.md"
license = { text = "See top level LICENSE.txt file for license terms." } # Replace with actual license from __version__.py
keywords = ["resstock", "postprocessing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "connectorx>=0.4.3",
    "dash-bootstrap-components>=2.0.3",
    "dash-extensions>=2.0.4",
    "dash>=3.0.4",
    "fsspec",
    "geopandas",
    "kaleido==0.2.1; sys_platform != 'win32'",
    "kaleido==0.1.0.post1; sys_platform == 'win32'",
    "nbformat>=4.2.0",
    "pandas",
    "plotly",
    "polars-lts-cpu",
    "prefect>=3.4.5",
    "pyarrow",
    "pydantic>=2.11.5",
    "pyyaml",
    "s3fs",
    "boto3[crt]>=1.39.4",
    "boto3-stubs>=1.39.4",
    "gunicorn>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/NREL/resstock" # Replace with actual URL from __version__.py

[project.scripts]
resstockpostproc = "resstockpostproc.entry_points:main"

[tool.setuptools.packages.find]
include = ["resstockpostproc"]

[tool.setuptools.package-data]
resstockpostproc = [
    "resources/gisdata/*.geojson",
    "resources/gisdata/*.csv",
    "resources/publication/sdr_column_definitions.csv"
]

[dependency-groups]
dev = [
    "ipykernel",
    "mypy>=1.16.0",
    "pandas-stubs",
    "plotly-stubs>=0.0.5",
    "pre-commit>=4.2.0",
    "pytest",
    "scipy-stubs",
    "types-colorama",
    "types-decorator",
    "types-geopandas",
    "types-greenlet",
    "types-jsonschema",
    "types-openpyxl",
    "types-pexpect",
    "types-psutil",
    "types-pygments",
    "types-python-dateutil",
    "types-pyyaml",
]

[tool.hatch.metadata]  # To allow direct references to git dependencies
allow-direct-references = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.prefect.server.ephemeral]
enabled = true
[tool.prefect.server]
analytics_enabled = false
[tool.prefect.cloud]
enable_orchestration_telemetry = false
[tool.prefect.logging]
level = "INFO"
