[project]
name = "resstock-sampler"
version = "0.1.0"
description = "ResStock sampling utility for building stock characteristics"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "networkx",
    "click",
    "joblib",
    "numpy",
    "pyarrow",
    "polars>=1.8.2",
    "pyyaml>=6.0.2",
]

[project.scripts]
resstock-sampler = "src.sampler.sampler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
